--- a/deployment/instances_up.yml
+++ b/deployment/instances_up.yml
@@ -4,6 +4,13 @@
   gather_facts: no
   tasks:
 
+  - name: get the username running the deploy
+    become: false
+    local_action: command whoami
+    register: local_username
+
+  - debug: var=local_username
+
   - name: create computes
     os_server:
       state: present
@@ -15,14 +22,11 @@
       nics:
         - net-id: e34992da-2361-4b12-9c05-d41680f90fc0
       meta:
-        group: computes
+        group: mpackard-computes
       auto_ip: no
     with_items:
-      - compute1
-      - compute2
-      - compute3
-      - compute4
-
+      - "{{local_username}}-compute1"
+      - "{{local_username}}-compute2"
 
   - name: create servers
     os_server:
@@ -35,8 +39,8 @@
       nics:
         - net-id: e34992da-2361-4b12-9c05-d41680f90fc0
       meta:
-        group: servers
+        group: mpackard-servers
       auto_ip: no
     with_items:
-      - server1
+      - "{{local_username}}-server1"
 
