--- a/deployment/deploy-abaco.yml
+++ b/deployment/deploy-abaco.yml
@@ -5,6 +5,24 @@
 
   tasks:
 
+
+  - name: get the username running the deploy
+    become: false
+    local_action: command whoami
+    register: local_username
+
+  - name: get the homedir of the user running the deploy
+    become: false
+    local_action: command echo $HOME
+    register: local_homedir
+
+#  - debug: var=local_username
+#  - debug: var=local_homedir
+
+  - fail:
+      msg: "please do not run as root"
+    when: local_username.stdout == "root"
+
   - name: add devicemapper and other support packages
     yum: 
       name: ['epel-release', 'device-mapper-persistent-data', 'lvm2']
@@ -37,3 +55,34 @@
   
   - name: ensure docker is running
     service: name=docker state=started enabled=yes
+
+  - name: create user
+    user:
+      name: apim
+      group: docker    
+
+  - name: create logs dir
+    file:
+      path: /home/apim/logs
+      state: directory
+      owner: apim
+ 
+  - name: abaco.conf
+    template:
+      src: "{{local_homedir.stdout}}/abaco.conf"
+      dest: /home/apim/abaco.conf
+      owner: apim
+
+  - name: docker-compose-compute.yml  
+    template:
+      src: "{{local_homedir.stdout}}/docker-compose-compute.yml"
+      dest: /home/apim/docker-compose-compute.yml
+      owner: apim
+
+  - name: docker compose up 
+    become: yes
+    become_user: apim
+    shell: /usr/local/bin/docker-compose -f docker-compose-compute.yml up
+    args:
+      chdir: /home/apim
+
