--- a/deployment/up-instances.yml
+++ b/deployment/up-instances.yml
@@ -26,7 +26,7 @@
       auto_ip: no
     with_items:
       - "{{local_username.stdout}}-compute1"
-      - "{{local_username.stdout}}-compute2"
+      #- "{{local_username.stdout}}-compute2"
       #- "{{local_username.stdout}}-compute3"
       #- "{{local_username.stdout}}-compute4"
       #- "{{local_username.stdout}}-compute5"
