Broadened naming and added Dockerfile for images

--- a/deployment/ansible/get_error_logs.yml
+++ b/deployment/ansible/get_error_logs.yml
@@ -4,10 +4,12 @@
 - hosts: all
   become: true
   tasks:
-  - name: get logs
-    become: yes
-    become_user: apim
-    shell: cat worker.log | grep ERROR
-    debug: k8s_version.stdout
-    args:
-      chdir: /home/apim/logs
+    - name: get logs
+      become: yes
+      become_user: apim
+      shell: cat worker.log | grep ERROR
+
+    #- name: show ERROR in logs
+      #debug: k8s_version.stdout
+    #  args:
+     #  chdir: /home/apim/logs
