Adding jupyter tools for graph creation and analytics

--- a/deployment/abaco_files/abaco.conf
+++ b/deployment/abaco_files/abaco.conf
@@ -39,6 +39,8 @@ uri: amqp://10.49.10.9:5972
 # host_id should be the unique for each worker host.
 host_id: {{ abaco_host_id }}
 
+max_cmd_length: 999999
+
 # list of queues that spawners on this host will subscribe to.
 host_queues: default, special
 
@@ -56,16 +58,18 @@ abaco_conf_host_path:
 # the maximum number of workers that are allowed to simultaneously be running on a given compute host.
 # Spawners will unsubscribe from the command channel when this threshold is met.
 # For local development, we intentially keep the max workers small:
-max_workers_per_host: 6
+max_workers_per_host: 9999
 
 # the default maximum number of workers that a given actor can have at one time. admin's can set the
 # max_workers attribute for a given actor to a different number. the autoscaler will not scale
 # an actor's worker pool beyond this number.
-max_workers_per_actor: 36
+max_workers_per_actor: 9999
 
 [workers]
 # number of worker containers to initially start when an actor is created
 init_count: 0
+
+autoscaling = True
 
 # max length of time, in seconds, an actor container is allowed to execute before being killed.
 # set to -1 for indefinite execution time.
